[gd_scene load_steps=6 format=3 uid="uid://c3340dgdfq7vc"]

[ext_resource type="Script" path="res://scripts/inventory/small_star.gd" id="1_lwahc"]
[ext_resource type="Texture2D" uid="uid://bunv2bw33rakh" path="res://sprites/items/item_spawnables/small_star.png" id="2_3m4ns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q54m6"]
size = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_qkddj"]
resource_name = "spin"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wnic4"]
_data = {
"spin": SubResource("Animation_qkddj")
}

[node name="small_star" type="Node2D" node_paths=PackedStringArray("sprite")]
texture_filter = 1
script = ExtResource("1_lwahc")
sprite = NodePath("main_body/main_body_2/Sprite2D")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("RectangleShape2D_q54m6")

[node name="Sprite2D" type="Sprite2D" parent="main_body/main_body_2"]
texture = ExtResource("2_3m4ns")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_wnic4")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
